force-app/main/default/objects/EZProtect4SF__EZProtectFileLink__c/EZProtect4SF__EZProtectFileLink__c.object-meta.xml
<CustomObject>
    <label>EZProtect Document Link</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>EZProtectFileLink Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EZProtect Document Links</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>