force-app/main/default/objects/EZProtect4SF__EZProtectFileLink__c/fields/EZProtect4SF__Body__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__Body__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Body</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>