force-app/main/default/objects/EZProtect4SF__EZProtectFileLink__c/fields/EZProtect4SF__OriginalOwnerId__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__OriginalOwnerId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The original owner for the ContentVersion before it was reparented.</inlineHelpText>
    <label>Original Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>