force-app/main/default/objects/EZProtect4SF__EZProtectFileLink__c/fields/EZProtect4SF__ParentId__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__ParentId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ParentId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>