force-app/main/default/objects/EZProtect4SF__EZProtectFileLink__c/fields/EZProtect4SF__ShareType__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__ShareType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ShareType</label>
    <length>1</length>
    <type>Text</type>
</CustomField>