force-app/main/default/objects/EZProtect4SF__EZProtectFileLink__c/fields/EZProtect4SF__Type__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>