force-app/main/default/objects/EZProtect4SF__EZProtectFileLink__c/fields/EZProtect4SF__Visibility__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__Visibility__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Visibility</label>
    <length>50</length>
    <type>Text</type>
</CustomField>