force-app/main/default/objects/EZProtect4SF__EZProtectFileLink__c/recordTypes/EZProtect4SF__Chatter_Feed_Item.recordType-meta.xml
<RecordType>
    <fullName>EZProtect4SF__Chatter_Feed_Item</fullName>
    <active>true</active>
    <label>Chatter Feed Item</label>
</RecordType>