force-app/main/default/objects/EZProtect4SF__EZProtectFileLink__c/recordTypes/EZProtect4SF__Content_Document_Link.recordType-meta.xml
<RecordType>
    <fullName>EZProtect4SF__Content_Document_Link</fullName>
    <active>true</active>
    <label>Content Document Link</label>
</RecordType>