force-app/main/default/objects/EZProtect4SF__EZProtectFileLink__c/listViews/EZProtect4SF__All.listView-meta.xml
<ListView>
    <fullName>EZProtect4SF__All</fullName>
    <columns>NAME</columns>
    <columns>EZProtect4SF__ContentDocumentId__c</columns>
    <columns>EZProtect4SF__LinkedEntityId__c</columns>
    <columns>EZProtect4SF__RelatedRecordId__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>